--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ h4 {
 }
 h5 {
     font-size: 14px;
+    font-weight: bold;
 }
 h6 {
     font-size: 11px;
@@ -269,7 +270,7 @@ i.large {
 .btn-group > .btn,
 .parallax .btn {
     color: #fff;
-    background: #1abb9c;
+    background: rgb(125, 173, 245);
     margin-bottom: 10px;
     margin-right: 5px;
     padding: 9px 20px 11px 20px;
@@ -2155,10 +2156,11 @@ textarea {
     display: block;
     padding: 10px 0;
     /*     margin: 63px 20px 20px 20px; */
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
+    font-weight: bold;
     color: #e9e9e9;
-    font-size: 13px;
+    font-size: 15px;
     text-align: center;
     text-shadow: 0px 1px 0px rgba(0,0,0,0.75);
 }
@@ -2170,7 +2172,7 @@ textarea {
     text-transform: none;
     letter-spacing: 0.2px;
     margin-top: 5px;
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 .overlay div.da-animate {
     -webkit-transition: all 0.3s ease;
@@ -2232,6 +2234,10 @@ textarea {
 }
 .da-slideLeft {
     left: 0px
+}
+
+.overlay-hidden {
+    opacity: 0.25 !important;
 }
 /*-----------------------------------------------------------------------------------*/
 /*	DETAILVIEW
@@ -3100,27 +3106,75 @@ textarea {
     margin-left: 150px;
 }
 
-.post-title-sections {
-    font-family: 'Montserrat', sans-serif;
-    text-transform: uppercase;
-    font-size: 60px;
-    line-height: 26px;
-    color: #11355F;
-    text-align: center;
+@media all and (min-width: 960px) {
+    .post-title-sections {
+        font-family: 'Montserrat', sans-serif;
+        text-transform: uppercase;
+        font-size: 60px;
+        line-height: 26px;
+        color: #11355F;
+        text-align: center;
+    }
 }
 
-.post-secundary-sections {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    font-size:17px;
-    color:#495D78;
-    padding-top: 15px;
-    text-align: center;
-    margin-right: 342px;
-    margin: 0 auto;
-    width: 766px;
+@media all and (max-width: 959px) and (min-width: 600px) {
+    .post-title-sections {
+        font-family: 'Montserrat', sans-serif;
+        text-transform: uppercase;
+        font-size: 40px;
+        line-height: 17px;
+        color: #11355F;
+        text-align: center;
+    }
+}
+ 
+@media all and (max-width: 599px) and (min-width: 320px) {
+    .post-title-sections {
+        font-family: 'Montserrat', sans-serif;
+        text-transform: uppercase;
+        font-size: 30px;
+        line-height: 9px;
+        color: #11355F;
+        text-align: center;
+    }
 }
 
+@media all and (min-width: 960px) {
+    .post-secundary-sections {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+        font-size:17px;
+        color:#495D78;
+        padding-top: 15px;
+        text-align: center;
+        padding: 15px 20px 0px 20px;
+    }
+}
+
+@media all and (max-width: 959px) and (min-width: 600px) {
+    .post-secundary-sections {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+        font-size:15px;
+        color:#495D78;
+        padding-top: 15px;
+        text-align: center;
+        padding: 15px 20px 0px 20px;
+    }
+}
+ 
+@media all and (max-width: 599px) and (min-width: 320px) {
+    .post-secundary-sections {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+        font-size:13px;
+        color:#495D78;
+        padding-top: 15px;
+        text-align: center;
+        padding: 15px 20px 0px 20px;
+
+    }
+}
 
 .country {
     font-family: 'Montserrat', sans-serif;
